@@ -1,6 +1,8 @@
 Change Log for OpenXava project
 ===============================
 
+- New isJavaIdentifier() method in Strings utility class.
+- Fix: XSS vulnerability using script injection in module URL parameters. 
 - Fix: All English archetypes include a null folder in the created project.
 - Fix: Drag & drop in the tree loses the children of the moved node in specific cases.
 - Fix: Loading... message fixed with a @Calculation property of a reference inside a hidden section.
